--- a/client/package.json
+++ b/client/package.json
@@ -5,12 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "gh-pages": "^6.0.0",
     "graphql": "^16.6.0",
     "gsap": "^3.11.5",
     "react": "^18.2.0",
