--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "vite-tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
+    "@types/node": "^20.5.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
