--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_CONNECTION_STRING=mongodb+srv://jacobuskim:JSLY6bccVaDUZjpj@dashboard.ujdqfva.mongodb.net/?retryWrites=true&w=majority
+REACT_APP_ROUTER_BASE_PATH=/
