--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,8 +18,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": ".",
-
+    "baseUrl": "",
     "paths": {
       "@/*": ["./*"],
       "@data/*": ["./src/data/*"],
