--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
+    "dybd": "tsc && vite build && gh-pages -d dist",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
