--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,1 @@
-MONGO_CONNECTION_STRING=mongodb+srv://jacobuskim:JSLY6bccVaDUZjpj@dashboard.ujdqfva.mongodb.net/?retryWrites=true&w=majority
-REACT_APP_ROUTER_BASE_PATH=/
+MONGO_URI='mongodb+srv://jacobuskim:VTbExfbvq7WoxqEF@dashboard.ujdqfva.mongodb.net/dashdb?retryWrites=true&w=majority'
